# PacMan

./: CMakeLists.txt
include/: game.h  mouse.h
src/: game.c  main.c  mouse.c
